kubes/service_external.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsirung-external
  namespace: default
  labels:
    app: vault
    vault_cluster: tsirung
spec:
  type: NodePort
  ports:
  # - name: vault-client
  #   port: 8200
  #   protocol: TCP
  #   targetPort: 8200
  - name: vault-cluster
    port: 8201
    protocol: TCP
    targetPort: 8201
  - name: prometheus
    port: 9102
    protocol: TCP
    targetPort: 9102
  selector:
    app: vault
    vault_cluster: tsirung
  sessionAffinity: None
